jboss 7 replaced with wildfly 9

--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -3,7 +3,7 @@
 
 ## JBOSS HOME
 app.base.dir=/opt
-jboss.home=/opt/jboss-as-7.1.1.Final
+jboss.home=/opt/wildfly-9.0.2.Final
 axis2.zip.name=axis2-1.6.3-war.zip
 axis2.war.name=i2b2.war
 bin.includes = lib/jdom/jdom.jar
@@ -14,7 +14,7 @@ i2b2.version=1706
 
 ## I2B2 properties
 packages.dir=/vagrant/packages/
-packages.dir.noload=false
+packages.dir.noload=true
 packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/84p6lgOCbkI5nbw/download
 base.dir=/vagrant/
 ant.installdata.dir=/vagrant/i2b2_install/
