--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -26,6 +26,9 @@ Vagrant.configure(2) do |config|
 
 # i2b2 web services
   config.vm.network "forwarded_port", guest: 9090, host: 9090
+  config.vm.network "forwarded_port", guest: 8080, host: 8080
+# wildfly management console
+  config.vm.network "forwarded_port", guest_ip: "127.0.0.1", guest: 9990, host: 9990
 
 # postgresql
   config.vm.network "forwarded_port", guest: 5432, host: 15432
