--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -7,7 +7,7 @@
 # you're doing.
 Vagrant.configure(2) do |config|
   config.vm.box = "bento/debian-8.2" # "boxcutter/debian82" # "deb/jessie-amd64"
-#  config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.provision :shell, path: "bootstrap.sh"
   
   # Troubleshooting if startup fails:
   #config.vm.provider :virtualbox do |vb|
