--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -6,6 +6,8 @@ app.base.dir=/opt
 jboss.home=/opt/wildfly-9.0.2.Final
 axis2.zip.name=axis2-1.6.3-war.zip
 axis2.war.name=i2b2.war
+axis2.patch.zip.name=wildfly-deployment-i2b2war-WEB-INF.zip
+jboss.zip.name=wildfly-9.0.2.Final.zip
 bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
 jboss.dir.exist=false
