--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -159,7 +159,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <!--unpack built i2b2-->
         <!--unzip src="${packages.dir}/jboss-configuration-slim.zip" dest="${jboss.home}/standalone/" /-->
         <!--unzip src="${packages.dir}/jboss-deployment-xml.zip" dest="${jboss.home}/standalone/deployments" /-->
-        <unzip src="${packages.dir}/jboss-deployment-i2b2war-WEB-INF.zip" dest="${jboss.home}/standalone/deployments/${axis2.war.name}" />
+        <unzip src="${packages.dir}/${axis2.patch.zip.name}" dest="${jboss.home}/standalone/deployments/${axis2.war.name}" />
         <copy todir="${jboss.home}/standalone/configuration">
             <fileset dir="${ant.installdata.dir}/jboss_config/"/>
         </copy>
@@ -181,7 +181,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
     </target>
     <target name="unzip_jboss" depends="jboss_exists" unless="${jboss.dir.exist}">
         <echo message="unzip jboss"/>
-        <unzip src="${packages.dir}/wildfly-9.0.2.Final.zip" dest="${app.base.dir}" />
+        <unzip src="${packages.dir}/${jboss.zip.name}" dest="${app.base.dir}" />
         <chmod dir="${jboss.home}/bin" perm="ugo+rx" includes="**/*.sh"/>
     </target>
     <target name="jboss_exists">
