added more configurable files and updated build xml

--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -6,7 +6,8 @@ app.base.dir=/opt
 jboss.home=/opt/wildfly-9.0.2.Final
 axis2.zip.name=axis2-1.6.3-war.zip
 axis2.war.name=i2b2.war
-axis2.patch.zip.name=wildfly-deployment-i2b2war-WEB-INF.zip
+axis2.patch.zip.name=jboss-deployment-i2b2war-WEB-INF.zip
+#axis2.patch.zip.name=wildfly-deployment-i2b2war-WEB-INF.zip
 jboss.zip.name=wildfly-9.0.2.Final.zip
 bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
@@ -69,6 +70,8 @@ db.DBDRIVERJAR=@DBDRIVERJAR@
 db.DBURL=@DBURL@
 db.DBUSER=@DBUSER@
 db.DBPWD=@DBPWD@
+
+db.HIVEID=@I2B2HIVEID@
 
 db.HIVEUSER=@I2B2HIVEUSER@
 db.HIVEPWD=@I2B2HIVEPWD@
