--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -18,8 +18,8 @@ i2b2.version=1706
 ## I2B2 properties
 packages.dir=/vagrant/packages/
 packages.dir.noload=true
-packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/m1xEHGNKVPIUo1w/download
-#packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download
+#packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/m1xEHGNKVPIUo1w/download
+packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download
 base.dir=/vagrant/
 ant.installdata.dir=/vagrant/i2b2_install/
 ant.i2b2.data.dir=/vagrant/i2b2_install/i2b2_src/edu.harvard.i2b2.data/Release_1-7/NewInstall/
@@ -28,36 +28,45 @@ web.html.dir=/var/webroot
 log.dir=/vagrant/logs
 hive.dir=db_hive/
 pm.dir=db_pm/
+im.dir=db_im/
 work.dir=db_work/
 meta.dir=db_meta/
 crc.dir=db_crc/
 dbuser.dir=db_user/
 
-# Created by AKTIN@2015
+jboss.ds-xml.dir=jboss_xml_ds/
+
+# data base values
 db.type=postgresql
+db.ip.addr=localhost
 db.type.name=PostgreSQL
 db.server=localhost:5432/
 db.name=i2b2
-db.project=demo
-db.project.name=Demo
+db.project=aktin
+db.project.name=Aktin
 db.driver=org.postgresql.Driver
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
 
-db.hive.id=i2b2demo
+db.hive.id=i2b2aktin
 
 db.hive.user=i2b2hive
 db.hive.pwd=i2b2hive
 db.pm.user=i2b2pm
 db.pm.pwd=i2b2pm
+db.im.user=i2b2imdata
+db.im.pwd=i2b2imdata
 db.work.user=i2b2workdata
 db.work.pwd=i2b2workdata
 db.meta.user=i2b2metadata
 db.meta.pwd=i2b2metadata
 db.crc.user=i2b2demodata
 db.crc.pwd=i2b2demodata
+
+# replace properties
+db.IPADDR=@IPADDR@
 
 db.DBTYPE=@DBTYPE@
 db.DBTYPENAME=@DBTYPENAME@
@@ -77,6 +86,8 @@ db.HIVEUSER=@I2B2HIVEUSER@
 db.HIVEPWD=@I2B2HIVEPWD@
 db.PMUSER=@I2B2PMUSER@
 db.PMPWD=@I2B2PMPWD@
+db.IMUSER=@I2B2IMUSER@
+db.IMPWD=@I2B2IMPWD@
 db.WORKUSER=@I2B2WORKUSER@
 db.WORKPWD=@I2B2WORKPWD@
 db.METAUSER=@I2B2METAUSER@
@@ -84,5 +95,4 @@ db.METAPWD=@I2B2METAPWD@
 db.DEMOUSER=@I2B2DEMOUSER@
 db.DEMOPWD=@I2B2DEMOPWD@
 
-jboss.ds-xml.dir=jboss_xml_ds/
 
