--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -17,7 +17,7 @@ i2b2.version=1706
 
 ## I2B2 properties
 packages.dir=/vagrant/packages/
-packages.dir.noload=true
+packages.dir.noload=false
 #packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/m1xEHGNKVPIUo1w/download
 packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download
 base.dir=/vagrant/
