--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -44,15 +44,15 @@ db.ip.addr=localhost
 db.type.name=PostgreSQL
 db.server=localhost:5432/
 db.name=i2b2
-db.project=aktin
-db.project.name=Aktin
+db.project=demo
+db.project.name=Demo
 db.driver=org.postgresql.Driver
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
 
-db.hive.id=i2b2aktin
+db.hive.id=i2b2demo
 
 db.hive.user=i2b2hive
 db.hive.pwd=i2b2hive
