--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-dwh/db/edu.harvard.i2b2.data/
-dwh/i2b2wizard/
-dwh/db/postgresql-9.2-1002.jdbc4.jar
-dwh/_later/
-dwh/jboss/
+dwh/packages/
+dwh/.vagrant
+dwh/i2b2_install/i2b2_src/*
+dwh/logs/
 *.box
 *.zip
 *.tar.gz
